# Akamai-Speedtest

./: .gitignore  Changelog.md  LICENSE  MANIFEST.in  Readme.md  pyproject.toml
.github/workflows/: publish-package.yml
netspeedcli/: netspeed.py  servers.py  settings.json
