[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "akamai-speedtest"
version = "0.1.1"
authors = [{ name = "YUcxovo", email = "junglcuxo@sjtu.edu.cn" }]
description = "The Akamai servers based CLI tool for netspeed test"
readme = "Readme.md"
requires-python = ">= 3.7"
keywords = ["speedtest", "cli"]
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["typer", "requests", "psutil", "ping3", "typing_extensions"]

[tool.setuptools]
packages = ["netspeedcli"]
include-package-data = true

[project.scripts]
speedtest = "netspeedcli.netspeed:app"
